--- a/Datos-Funciones-Obj-Arr/index.html
+++ b/Datos-Funciones-Obj-Arr/index.html
@@ -17,6 +17,10 @@
     </p>
     <!-- <script src="./js/primitivos.js" defer></script> -->
     <!-- <script src="./js/arreglos.js" defer></script> -->
-    <script src="./js/arreglos2.js" defer></script>
+    <!-- <script src="./js/arreglos2.js" defer></script> -->
+    <!-- <script src="./js/objeto-literal.js" defer></script> -->
+    <!-- <script src="./js/funciones.js" defer></script> -->
+    <!-- <script src="./js/return-funciones.js" defer></script> -->
+    <script src="./js/pro.js" defer></script>
   </body>
 </html>
