--- a/Ciclos-Loop/index.html
+++ b/Ciclos-Loop/index.html
@@ -18,10 +18,9 @@
   <body></body>
   <!-- <script src="./js/valor-referencia.js"></script> -->
   <!-- <script src="./js/estructura-control.js"></script> -->
-  <script src="./js/booleans.js"></script>
-  <!-- <script src="ternario.js"></script> -->
-  <!-- <script src="ternanio-pro.js"></script> -->
-  <!-- <script src="switch.js"></script> -->
-  <!-- <script src="DoWhile.js"></script> -->
-  <!-- <script src="For-in.js"></script> -->
+  <!-- <script src="./js/booleans.js"></script> -->
+  <!-- <script src="./js/ternario.js"></script> -->
+  <!-- <script src="./js/switch.js"></script> -->
+  <!-- <script src="./js/DoWhile.js"></script> -->
+  <script src="./js/For-in.js"></script>
 </html>
