implementación del patron modulo a la app

--- a/Proyectos/Black_Jack/index.html
+++ b/Proyectos/Black_Jack/index.html
@@ -56,7 +56,7 @@
         </div>
       </div>
     </div>
-    <script src="js/underscore_min.js" defer></script>
-    <script src="js/app.js" defer></script>
+    <script src="refactor/underscore_min.js" defer></script>
+    <script src="refactor/game.js" defer></script>
   </body>
 </html>
