--- a/Class-ESNextprivate_prop/index.html
+++ b/Class-ESNextprivate_prop/index.html
@@ -9,6 +9,7 @@
   <body>
     <header>Hello World!</header>
 
-    <script src="classAntes.js"></script>
+    <!-- <script src="classAntes.js"></script> -->
+    <script src="class_methods.js"></script>
   </body>
 </html>
