--- a/Class-ESNextprivate_prop/index.html
+++ b/Class-ESNextprivate_prop/index.html
@@ -8,12 +8,12 @@
   </head>
   <body>
     <header>Hello World!</header>
-    <pre id="log"></pre>
     <!-- <script src="classAntes.js"></script> -->
     <!-- <script src="class_methods.js"></script> -->
     <!-- <script src="set&get.js"></script> -->
     <!-- <script src="propiedades_y_métodos-estaticos.js"></script> -->
     <!-- <script src="extends_subClases.js"></script> -->
-    <script src="propiedadesPrivadas_Singleton.js"></script>
+    <!-- <script src="propiedadesPrivadas_Singleton.js"></script> -->
+    <script src="constructoresMultiples.js"></script>
   </body>
 </html>
