--- a/Proyectos/TodoApp-vite/src/todos/app.html
+++ b/Proyectos/TodoApp-vite/src/todos/app.html
@@ -4,7 +4,7 @@
     <input
       id="new-todo-input"
       class="new-todo"
-      placeholder="¿Qué tienes que hacer?"
+      placeholder="Something new to do?"
       autofocus
     />
   </header>
@@ -39,21 +39,21 @@
   <footer class="footer">
     <!-- This should be "0 items left" by default -->
     <span class="todo-count"
-      ><strong id="pending-count">0</strong> pendiente(s)</span
+      ><strong id="pending-count">0</strong> pending(s)</span
     >
     <!-- Remove this if you don't implement routing -->
     <ul class="filters">
       <li>
-        <a class="selected filtro" class="selected" href="#/">Todos</a>
+        <a class="selected filtro" class="selected" href="#/">All</a>
       </li>
       <li>
-        <a class="filtro" href="#/active">Pendientes</a>
+        <a class="filtro" href="#/active">Pendings</a>
       </li>
       <li>
-        <a class="filtro" href="#/completed">Completados</a>
+        <a class="filtro" href="#/completed">Completed</a>
       </li>
     </ul>
     <!-- Hidden if no completed items are left ↓ -->
-    <button class="clear-completed">Borrar completados</button>
+    <button class="clear-completed">Remove Completed</button>
   </footer>
 </section>
