--- a/Proyectos/TodoApp-vite/src/todos/app.html
+++ b/Proyectos/TodoApp-vite/src/todos/app.html
@@ -14,24 +14,7 @@
     <input id="toggle-all" class="toggle-all" type="checkbox" />
     <label for="toggle-all">Mark all as complete</label>
     <ul class="todo-list">
-      <!-- These are here just to show the structure of the list items -->
-      <!-- List items should get the class "editing" when editing and "completed" when marked as completed -->
-      <!-- <li class="completed" data-id="abc">
-                <div class="view">
-                    <input class="toggle" type="checkbox" checked>
-                    <label>Probar JavaScript</label>
-                    <button class="destroy"></button>
-                </div>
-                <input class="edit" value="Create a TodoMVC template">
-            </li> -->
-      <!-- <li>
-                <div class="view">
-                    <input class="toggle" type="checkbox">
-                    <label>Comprar un unicornio</label>
-                    <button class="destroy"></button>
-                </div>
-                <input class="edit" value="Rule the web">
-            </li> -->
+      <!-- Todos go here -->
     </ul>
   </section>
 
@@ -44,10 +27,10 @@
     <!-- Remove this if you don't implement routing -->
     <ul class="filters">
       <li>
-        <a class="selected filtro" class="selected" href="#/">All</a>
+        <a class="filtro" class="selected" href="#/">All</a>
       </li>
       <li>
-        <a class="filtro" href="#/active">Pendings</a>
+        <a class="filtro" href="#/active">Pending</a>
       </li>
       <li>
         <a class="filtro" href="#/completed">Completed</a>
